deploy/native-java17-openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: villains-db
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-url: https://github.com/edeandrea/quarkus-super-heroes
    app.quarkus.io/commit-id: f3cd04ab6878a820ce8fa1b267939bdecde0cee4
    app.quarkus.io/build-timestamp: 2021-12-13 - 22:26:55 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8084"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: native-java17-latest
    app: rest-villains
    application: villains-service
    app.openshift.io/runtime: quarkus
  name: rest-villains
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8084
  selector:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: native-java17-latest
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to: villains-db
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-url: https://github.com/edeandrea/quarkus-super-heroes
    app.quarkus.io/commit-id: f3cd04ab6878a820ce8fa1b267939bdecde0cee4
    app.quarkus.io/build-timestamp: 2021-12-13 - 22:26:55 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8084"
    prometheus.io/scheme: http
  labels:
    app: rest-villains
    application: villains-service
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: native-java17-latest
    app.kubernetes.io/name: rest-villains
  name: rest-villains
spec:
  replicas: 1
  selector:
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: native-java17-latest
    app.kubernetes.io/name: rest-villains
  template:
    metadata:
      annotations:
        app.openshift.io/connects-to: villains-db
        app.openshift.io/vcs-ref: main
        app.openshift.io/vcs-url: https://github.com/edeandrea/quarkus-super-heroes
        app.quarkus.io/commit-id: f3cd04ab6878a820ce8fa1b267939bdecde0cee4
        app.quarkus.io/build-timestamp: 2021-12-13 - 22:26:55 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8084"
        prometheus.io/scheme: http
      labels:
        app: rest-villains
        application: villains-service
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/part-of: villains-service
        app.kubernetes.io/version: native-java17-latest
        app.kubernetes.io/name: rest-villains
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/quarkus-super-heroes/rest-villains:native-java17-latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8084
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-villains
          ports:
            - containerPort: 8084
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8084
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: villains-db
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-url: https://github.com/edeandrea/quarkus-super-heroes
    app.quarkus.io/commit-id: f3cd04ab6878a820ce8fa1b267939bdecde0cee4
    app.quarkus.io/build-timestamp: 2021-12-13 - 22:26:55 +0000
  labels:
    app.kubernetes.io/name: rest-villains
    app.kubernetes.io/part-of: villains-service
    app.kubernetes.io/version: native-java17-latest
    app: rest-villains
    application: villains-service
    app.openshift.io/runtime: quarkus
  name: rest-villains
spec:
  port:
    targetPort: 8084
  to:
    kind: Service
    name: rest-villains
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: villains-db
    application: villains-service
    app.kubernetes.io/part-of: villains-service
    app.openshift.io/runtime: postgresql
  name: villains-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: villains-db
  template:
    metadata:
      labels:
        application: villains-service
        name: villains-db
    spec:
      containers:
        - image: bitnami/postgresql:13
          name: villains-db
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: villains-db-data
              mountPath: /bitnami/postgresql
            - name: villains-db-init
              mountPath: /docker-entrypoint-preinitdb.d
      volumes:
        - name: villains-db-data
          emptyDir: {}
        - name: villains-db-init
          configMap:
            name: villains-db-init
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: villains-db
    application: villains-service
  name: villains-db
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: villains-db
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/connects-to: heroes-db
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-url: https://github.com/edeandrea/quarkus-super-heroes
    app.quarkus.io/commit-id: f3cd04ab6878a820ce8fa1b267939bdecde0cee4
    app.quarkus.io/build-timestamp: 2021-12-13 - 22:27:45 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8083"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/version: native-java17-latest
    app: rest-heroes
    application: heroes-service
    app.openshift.io/runtime: quarkus
  name: rest-heroes
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8083
  selector:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/version: native-java17-latest
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/connects-to: heroes-db
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-url: https://github.com/edeandrea/quarkus-super-heroes
    app.quarkus.io/commit-id: f3cd04ab6878a820ce8fa1b267939bdecde0cee4
    app.quarkus.io/build-timestamp: 2021-12-13 - 22:27:45 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8083"
    prometheus.io/scheme: http
  labels:
    app: rest-heroes
    application: heroes-service
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/version: native-java17-latest
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/name: rest-heroes
  name: rest-heroes
spec:
  replicas: 1
  selector:
    app.kubernetes.io/version: native-java17-latest
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/name: rest-heroes
  template:
    metadata:
      annotations:
        app.openshift.io/connects-to: heroes-db
        app.openshift.io/vcs-ref: main
        app.openshift.io/vcs-url: https://github.com/edeandrea/quarkus-super-heroes
        app.quarkus.io/commit-id: f3cd04ab6878a820ce8fa1b267939bdecde0cee4
        app.quarkus.io/build-timestamp: 2021-12-13 - 22:27:45 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8083"
        prometheus.io/scheme: http
      labels:
        app: rest-heroes
        application: heroes-service
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/version: native-java17-latest
        app.kubernetes.io/part-of: heroes-service
        app.kubernetes.io/name: rest-heroes
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/quarkus-super-heroes/rest-heroes:native-java17-latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8083
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-heroes
          ports:
            - containerPort: 8083
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8083
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/connects-to: heroes-db
    app.openshift.io/vcs-ref: main
    app.openshift.io/vcs-url: https://github.com/edeandrea/quarkus-super-heroes
    app.quarkus.io/commit-id: f3cd04ab6878a820ce8fa1b267939bdecde0cee4
    app.quarkus.io/build-timestamp: 2021-12-13 - 22:27:45 +0000
  labels:
    app.kubernetes.io/name: rest-heroes
    app.kubernetes.io/part-of: heroes-service
    app.kubernetes.io/version: native-java17-latest
    app: rest-heroes
    application: heroes-service
    app.openshift.io/runtime: quarkus
  name: rest-heroes
spec:
  port:
    targetPort: 8083
  to:
    kind: Service
    name: rest-heroes
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: heroes-db
    application: heroes-service
    app.kubernetes.io/part-of: heroes-service
    app.openshift.io/runtime: postgresql
  name: heroes-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: heroes-db
  template:
    metadata:
      labels:
        name: heroes-db
        application: heroes-service
    spec:
      containers:
        - image: bitnami/postgresql:13
          name: heroes-db
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: heroes-db-data
              mountPath: /bitnami/postgresql
            - name: heroes-db-init
              mountPath: /docker-entrypoint-preinitdb.d
      volumes:
        - name: heroes-db-data
          emptyDir: {}
        - name: heroes-db-init
          configMap:
            name: heroes-db-init
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: heroes-db
    application: heroes-service
  name: heroes-db
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: heroes-db
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/edeandrea/quarkus-super-heroes
    app.openshift.io/connects-to: "fights-db,fights-kafka"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/commit-id: f3cd04ab6878a820ce8fa1b267939bdecde0cee4
    app.quarkus.io/build-timestamp: 2021-12-13 - 22:28:41 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8082"
    prometheus.io/scheme: http
  labels:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: native-java17-latest
    app: rest-fights
    application: fights-service
    app.openshift.io/runtime: quarkus
  name: rest-fights
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8082
  selector:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: native-java17-latest
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/edeandrea/quarkus-super-heroes
    app.openshift.io/connects-to: "fights-db,fights-kafka"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/commit-id: f3cd04ab6878a820ce8fa1b267939bdecde0cee4
    app.quarkus.io/build-timestamp: 2021-12-13 - 22:28:41 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8082"
    prometheus.io/scheme: http
  labels:
    app: rest-fights
    application: fights-service
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: native-java17-latest
    app.kubernetes.io/name: rest-fights
  name: rest-fights
spec:
  replicas: 1
  selector:
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: native-java17-latest
    app.kubernetes.io/name: rest-fights
  template:
    metadata:
      annotations:
        app.openshift.io/vcs-url: https://github.com/edeandrea/quarkus-super-heroes
        app.openshift.io/connects-to: "fights-db,fights-kafka"
        app.openshift.io/vcs-ref: main
        app.quarkus.io/commit-id: f3cd04ab6878a820ce8fa1b267939bdecde0cee4
        app.quarkus.io/build-timestamp: 2021-12-13 - 22:28:41 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
        prometheus.io/port: "8082"
        prometheus.io/scheme: http
      labels:
        app: rest-fights
        application: fights-service
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/part-of: fights-service
        app.kubernetes.io/version: native-java17-latest
        app.kubernetes.io/name: rest-fights
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
          image: quay.io/quarkus-super-heroes/rest-fights:native-java17-latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          name: rest-fights
          ports:
            - containerPort: 8082
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8082
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
  triggers:
    - imageChangeParams:
        automatic: true
        containerNames:
          - rest-fights
        from:
          kind: ImageStreamTag
          name: rest-fights:java17-latest
      type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    app.openshift.io/vcs-url: https://github.com/edeandrea/quarkus-super-heroes
    app.openshift.io/connects-to: "fights-db,fights-kafka"
    app.openshift.io/vcs-ref: main
    app.quarkus.io/commit-id: f3cd04ab6878a820ce8fa1b267939bdecde0cee4
    app.quarkus.io/build-timestamp: 2021-12-13 - 22:28:41 +0000
  labels:
    app.kubernetes.io/name: rest-fights
    app.kubernetes.io/part-of: fights-service
    app.kubernetes.io/version: native-java17-latest
    app: rest-fights
    application: fights-service
    app.openshift.io/runtime: quarkus
  name: rest-fights
spec:
  port:
    targetPort: 8082
  to:
    kind: Service
    name: rest-fights
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fights-db
    application: fights-service
    app.kubernetes.io/part-of: fights-service
    app.openshift.io/runtime: postgresql
  name: fights-db
spec:
  replicas: 1
  selector:
    matchLabels:
      name: fights-db
  template:
    metadata:
      labels:
        application: fights-service
        name: fights-db
    spec:
      containers:
        - image: bitnami/postgresql:13
          name: fights-db
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: fights-db-data
              mountPath: /bitnami/postgresql
            - name: fights-db-init
              mountPath: /docker-entrypoint-preinitdb.d
      volumes:
        - name: fights-db-data
          emptyDir: {}
        - name: fights-db-init
          configMap:
            name: fights-db-init
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: fights-db
    application: fights-service
  name: fights-db
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: fights-db
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ui-super-heroes
    application: super-heroes
    app.openshift.io/runtime: nodejs
    app.kubernetes.io/part-of: super-heroes
  annotations:
    app.openshift.io/connects-to: rest-fights
  name: ui-super-heroes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui-super-heroes
      deployment: ui-super-heroes
  template:
    metadata:
      labels:
        app: ui-super-heroes
        deployment: ui-super-heroes
    spec:
      containers:
        - image: quay.io/quarkus-super-heroes/ui-super-heroes:latest
          name: ui-super-heroes
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
          ports:
            - containerPort: 8080
              protocol: TCP
              name: http
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            timeoutSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: ui-super-heroes
    application: super-heroes
  name: ui-super-heroes
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
      name: http
  selector:
    app: ui-super-heroes
    deployment: ui-super-heroes
  type: ClusterIP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ui-super-heroes
  labels:
    app: ui-super-heroes
spec:
  to:
    kind: Service
    name: ui-super-heroes
  port:
    targetPort: 8080
